# code-challenges

./: .gitignore  Cargo.toml  README.md  justfile  pyproject.toml  rustfmt.toml
.github/workflows/: auto.yaml  deploy.yaml  manual.yaml
src/: lib.rs  main.rs  mod.rs
src/_core/: errors.rs  mod.rs  rand.rs  strings.rs  time.rs
src/app/: messages.rs  mod.rs
src/models/tree/: base.rs  mod.rs  model.rs  tests_model.rs
src/problems/: mod.rs
src/problems/hackerrank/: mod.rs
src/problems/hackerrank/mathematics/: main.rs  mod.rs
src/problems/hackerrank/mathematics/scalar_products/: README.md  approach1.rs  approach2.rs  mod.rs  tests_approach1.rs  tests_approach2.rs
src/problems/hackerrank/project_euler/: mod.rs
src/problems/hackerrank/project_euler/problem10_prime_summation/: approach1.rs  mod.rs  tests_approach1.rs
src/problems/hackerrank/project_euler/problem254_sum_digit_factorials/: approach1.rs  mod.rs  tests_approach1.rs
templates/: template.env
tests/: lib.rs
