# cargo-features = ["profile-rustflags"]

[package]
name = "general"
version = "0.1.0"
edition = "2024"
description = "Code for challenges from various platforms"
homepage = "github.com/raj-open/code-challenges"
rust-version = "1.86"
authors = [
    "raj-open <raj-open@users.noreply.github.com>",
]

# cf. https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "general"
# crate-type = ["lib"]

[workspace]
members = [
    ".",
]

# [env]
# NOTE: has no effect
# PYO3_PYTHON = { value = "python3" }
# CC = "zig cc"
# CXX = "zig c++"

[profile.release]
# rustflags = [
#     "-A", "unused_imports",
#     "-A", "dead_code",
#     "-C", "link-arg=-undefined",
#     "-C", "link-arg=dynamic_lookup",
# ]
debug = true
strip = false

[profile.dev]
# rustflags = [
#     "-A", "unused_imports",
#     "-A", "dead_code",
# ]

[profile.test]
# rustflags = [
#     "-A", "unused_imports",
#     "-A", "dead_code",
# ]

[dependencies]
serde = {version = "^1.0.219", features = ["derive"]}
serde_json = {version = "^1.0.143"}
dict_derive = {version = "^0.6.0" }
dedent = {version="^0.1.1"}
itertools = {version = "^0.14.0"}
indoc = {version="^2.0.6"}
strip-ansi-escapes = {version="^0.2.1"}
rand = {version="^0.9.2"}
rand_chacha = {version = "^0.9.0"}
# numpy = {version = "^0.26.0"}
ndarray = {version = "^0.16.1"}

[dev-dependencies]
cargo-zigbuild = {version = "^0.20.1"}
rstest = {version = "^0.26.1"}
rustfmt = {version = "^0.10.0", features = []}
# just = {version = "^1.40.0"}

[[bin]]
name = "CodeChallenges"
path = "src/main.rs"

[[bin]]
name = "HackerRankMathematiks"
path = "src/problems/hackerrank/mathematics/main.rs"

[[bin]]
name = "GeniusSquare"
path = "src/bin/games/genius_square/main.rs"
