[project]
name = 'code_challenges'
version = "0.2.0"
description = 'Code for challenges from various platforms'
authors = [
    {name="raj-open", email="raj-open@users.noreply.github.com"},
]
urls = {homepage = 'https://github.com/raj-open/exercises'}
maintainers = [
    {name="raj-open", email="raj-open@users.noreply.github.com"},
]
license = 'LICENCE'
readme = 'README.md'
keywords = [
    "python",
    "rust",
]
# cf. https://pypi.org/classifiers
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10,<3.15"

dependencies = [
    # --------------------------------
    # compiler
    # --------------------------------
    "pip>=25.1.1",
    # --------------------------------
    # models
    # --------------------------------
    "pydantic>=2.11.4",
    "pydantic-yaml>=1.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
    "uv>=0.7.2",
]
